--- a/index.html
+++ b/index.html
@@ -7,7 +7,23 @@
     <title>OhMyFood</title>
     <meta name="description" content="OhMyFood" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="shortcut icon"
+      href="images/logo/ohmyfood@2x.svg"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2? family = Roboto: wght @ 300 & display = swap"
+      rel="feuille de style"
+    />
+    famille = Roboto: ital, wght @ 0,300; 0,500; 1,700 &
   </head>
   <body>
     <script src="" async defer></script>
