--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html>
   <head>
     <meta charset="utf-8" />
@@ -12,7 +11,7 @@
       href="images/logo/ohmyfood@2x.svg"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="" />
+    <link rel="stylesheet" href=".public/css/style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap"
@@ -23,9 +22,37 @@
       href="https://fonts.googleapis.com/css2? family = Roboto: wght @ 300 & display = swap"
       rel="feuille de style"
     />
-    famille = Roboto: ital, wght @ 0,300; 0,500; 1,700 &
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
+      integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
-    <script src="" async defer></script>
+    <header class="header">
+      <div class="header__logo">
+        <a href="#">
+          <img src="images/logo/ohmyfood@2x.svg" alt="ohmyfood logo" />
+        </a>
+      </div>
+      <div class="header__search">
+        <div class="header__icons">
+          <i class="fas fa-map-marker-alt"></i>
+        </div>
+        <input type="text" placeholder="Paris, Belleville" />
+      </div>
+    </header>
+    <main>
+      <article class="reserve">
+        <hgroup class="reserve__hgroup">
+          <h1>Réservez le menu qui vous convient</h1>
+          <h2>
+            Découvrez des restaurants d'exception, selectionés par nos soins
+          </h2>
+        </hgroup>
+        <a href="" class="reserve__btn-1"> Explorer nos restaurants </a>
+      </article>
+    </main>
   </body>
 </html>
