--- a/index.html
+++ b/index.html
@@ -100,11 +100,100 @@
                 </h3>
                 <h4 class="subtitle">Menilmontant</h4>
               </hgroup>
-              <div class="like"></div>
+              <div class="like">
+                <i class="far fa-heart default-icon"></i>
+                <i class="fas fa-heart hover-icon"></i>
+              </div>
+            </header>
+          </article>
+          <article class="store__card">
+            <figure class="store__img__header">
+              <img
+                src="images/restaurants/note.jpg"
+                alt="La note enchantée"
+                class="cart__img"
+              />
+              <figcaption class="img-btn-left">Nouveau</figcaption>
+            </figure>
+            <header class="store__contain">
+              <hgroup>
+                <h3>
+                  <a href="" class="strong">La note enchantée</a>
+                </h3>
+                <h4 class="subtitle">Charonne</h4>
+              </hgroup>
+              <div class="like">
+                <i class="far fa-heart default-icon"></i>
+                <i class="fas fa-heart hover-icon"></i>
+              </div>
+            </header>
+          </article>
+          <article class="store__card">
+            <figure class="store__img__header">
+              <img
+                src="images/restaurants/francaise.jpg"
+                alt="A la francaise"
+                class="cart__img"
+              />
+              <figcaption class="img-btn-left">Nouveau</figcaption>
+            </figure>
+            <header class="store__contain">
+              <hgroup>
+                <h3>
+                  <a href="" class="strong">A la française</a>
+                </h3>
+                <h4 class="subtitle">Cité Rouge</h4>
+              </hgroup>
+              <div class="like">
+                <i class="far fa-heart default-icon"></i>
+                <i class="fas fa-heart hover-icon"></i>
+              </div>
+            </header>
+          </article>
+          <article class="store__card">
+            <figure class="store__img__header">
+              <img
+                src="images/restaurants/delice.jpg"
+                alt="Le délice des sens"
+                class="cart__img"
+              />
+              <figcaption class="img-btn-left">Nouveau</figcaption>
+            </figure>
+            <header class="store__contain">
+              <hgroup>
+                <h3>
+                  <a href="" class="strong">Le délice des sens</a>
+                </h3>
+                <h4 class="subtitle">Folie-Méricourt</h4>
+              </hgroup>
+              <div class="like">
+                <i class="far fa-heart default-icon"></i>
+                <i class="fas fa-heart hover-icon"></i>
+              </div>
             </header>
           </article>
         </div>
       </section>
     </main>
+    <footer>
+      <div class="footer">
+        <div class="footer__logo">
+          <img src="images/logo/ohmyfood@2x.svg" alt="logo footer" />
+        </div>
+        <div class="footer__link">
+          <ul class="footer__link__value">
+            <li>
+              <i class="fas fa-utensils footer-icons"></i>Proposer un restaurant
+            </li>
+            <li>
+              <i class="fas fa-hands-helping footer-icons"></i>Devenir
+              partenaire
+            </li>
+            <li>Mentions légales</li>
+            <li>Contact</li>
+          </ul>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
