--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       type="image/x-icon"
     />
     <link rel="stylesheet" href=".public/css/style.css" />
+    <link rel="stylesheet" href=".public/media.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap"
@@ -96,7 +97,7 @@
             <header class="store__contain">
               <hgroup>
                 <h3>
-                  <a href="" class="strong">La palette du goût</a>
+                  <a href="menu1.html" class="strong">La palette du goût</a>
                 </h3>
                 <h4 class="subtitle">Menilmontant</h4>
               </hgroup>
