--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html>
   <head>
     <meta charset="utf-8" />
@@ -7,9 +6,195 @@
     <title>OhMyFood</title>
     <meta name="description" content="OhMyFood" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="" />
+    <link
+      rel="shortcut icon"
+      href="images/logo/ohmyfood@2x.svg"
+      type="image/x-icon"
+    />
+    <link rel="stylesheet" href=".public/css/style.css" />
+    <link rel="stylesheet" href=".public/media.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2? family = Roboto: wght @ 300 & display = swap"
+      rel="feuille de style"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
+      integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
-    <script src="" async defer></script>
+    <header class="header">
+      <div class="header__logo">
+        <a href="#">
+          <img src="images/logo/ohmyfood@2x.svg" alt="ohmyfood logo" />
+        </a>
+      </div>
+      <form action="" class="search__location">
+        <div class="search__icons">
+          <i class="fas fa-map-marker-alt location"></i>
+        </div>
+        <div class="input-field">
+          <input type="text" placeholder="Paris, Belleville" />
+        </div>
+      </form>
+    </header>
+    <main>
+      <article class="reserve">
+        <hgroup class="reserve__hgroup">
+          <h1>Réservez le menu qui vous convient</h1>
+          <h2>
+            Découvrez des restaurants d'exception, selectionés par nos soins
+          </h2>
+        </hgroup>
+        <a href="" class="reserve__btn-1"> Explorer nos restaurants </a>
+      </article>
+      <aside class="aside">
+        <h2 class="aside__title">Fonctionnement</h2>
+        <div class="aside__step">
+          <a href="#" class="aside__button">
+            <span class="aside__circle">1</span>
+            <span class="aside__icons">
+              <i class="fas fa-mobile-alt"></i>
+            </span>
+            <span class="aside__texte">Choisissez un restaurant</span>
+          </a>
+          <a href="#" class="aside__button">
+            <span class="aside__circle">2</span>
+            <span class="aside__icons">
+              <i class="fas fa-list"></i>
+            </span>
+            <span class="aside__texte">Composez un menu</span>
+          </a>
+          <a href="#" class="aside__button">
+            <span class="aside__circle">3</span>
+            <span class="aside__icons">
+              <i class="fas fa-store"></i>
+            </span>
+            <span class="aside__texte">Déguster au restaurant</span>
+          </a>
+        </div>
+      </aside>
+      <section>
+        <div class="store">
+          <h2 class="store__title">Restaurants</h2>
+          <article class="store__card">
+            <figure class="store__img__header">
+              <img
+                src="images/restaurants/palette.jpg"
+                alt="La palette du goût"
+                class="cart__img"
+              />
+              <figcaption class="img-btn-left">Nouveau</figcaption>
+            </figure>
+            <header class="store__contain">
+              <hgroup>
+                <h3>
+                  <a href="menu1.html" class="strong">La palette du goût</a>
+                </h3>
+                <h4 class="subtitle">Menilmontant</h4>
+              </hgroup>
+              <div class="like">
+                <i class="far fa-heart default-icon"></i>
+                <i class="fas fa-heart hover-icon"></i>
+              </div>
+            </header>
+          </article>
+          <article class="store__card">
+            <figure class="store__img__header">
+              <img
+                src="images/restaurants/note.jpg"
+                alt="La note enchantée"
+                class="cart__img"
+              />
+              <figcaption class="img-btn-left">Nouveau</figcaption>
+            </figure>
+            <header class="store__contain">
+              <hgroup>
+                <h3>
+                  <a href="" class="strong">La note enchantée</a>
+                </h3>
+                <h4 class="subtitle">Charonne</h4>
+              </hgroup>
+              <div class="like">
+                <i class="far fa-heart default-icon"></i>
+                <i class="fas fa-heart hover-icon"></i>
+              </div>
+            </header>
+          </article>
+          <article class="store__card">
+            <figure class="store__img__header">
+              <img
+                src="images/restaurants/francaise.jpg"
+                alt="A la francaise"
+                class="cart__img"
+              />
+              <figcaption class="img-btn-left">Nouveau</figcaption>
+            </figure>
+            <header class="store__contain">
+              <hgroup>
+                <h3>
+                  <a href="" class="strong">A la française</a>
+                </h3>
+                <h4 class="subtitle">Cité Rouge</h4>
+              </hgroup>
+              <div class="like">
+                <i class="far fa-heart default-icon"></i>
+                <i class="fas fa-heart hover-icon"></i>
+              </div>
+            </header>
+          </article>
+          <article class="store__card">
+            <figure class="store__img__header">
+              <img
+                src="images/restaurants/delice.jpg"
+                alt="Le délice des sens"
+                class="cart__img"
+              />
+              <figcaption class="img-btn-left">Nouveau</figcaption>
+            </figure>
+            <header class="store__contain">
+              <hgroup>
+                <h3>
+                  <a href="" class="strong">Le délice des sens</a>
+                </h3>
+                <h4 class="subtitle">Folie-Méricourt</h4>
+              </hgroup>
+              <div class="like">
+                <i class="far fa-heart default-icon"></i>
+                <i class="fas fa-heart hover-icon"></i>
+              </div>
+            </header>
+          </article>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <div class="footer">
+        <div class="footer__logo">
+          <img src="images/logo/ohmyfood@2x.svg" alt="logo footer" />
+        </div>
+        <div class="footer__link">
+          <ul class="footer__link__value">
+            <li>
+              <i class="fas fa-utensils footer-icons"></i>Proposer un restaurant
+            </li>
+            <li>
+              <i class="fas fa-hands-helping footer-icons"></i>Devenir
+              partenaire
+            </li>
+            <li>Mentions légales</li>
+            <li>Contact</li>
+          </ul>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
