--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       crossorigin="anonymous"
     />
   </head>
-  <body>
+  <body class="home">
     <header class="header">
       <div class="header__logo">
         <a href="#">
