--- a/menu1.html
+++ b/menu1.html
@@ -30,14 +30,112 @@
       crossorigin="anonymous"
     />
   </head>
-  <body>
-    <header class="header">
-      <div class="header__logo">
+  <body class="menu">
+    <header class="menu__header">
+      <div class="menu__header__logo">
         <a href="#">
           <img src="images/logo/ohmyfood@2x.svg" alt="ohmyfood logo" />
         </a>
+
+        <div class="header__back__icon">
+          <a href="index.html"><i class="fas fa-arrow-left"></i></a>
+        </div>
       </div>
-      
+      <figure class="cover__img">
+        <img
+          alt="La palette du goût restaurant"
+          src="images/restaurants/palette.jpg"
+        />
+      </figure>
+    </header>
+    <main class="bg-grey">
+      <div class="menu__summary">
+        <h1 class="menu__title">La palette du goût</h1>
+        <div class="like">
+          <i class="far fa-heart default-icon"></i>
+          <i class="fas fa-heart hover-icon"></i>
+        </div>
+      </div>
+      <section class="menu__plats">
+        <articles class="menu__details">
+          <h2 class="subtitle">Entrées</h2>
+          <hgroup class="menu__text">
+            <span class="prod">Fricassée d'escargot </span>
+            <h4>Au piment d'Espelette</h4>
+            <div class="price__container">
+              <div class="price">
+                <span>25€</span>
+              </div>
+              <div class="checkbox">
+                <i class="fas fa-check-circle btn-cirle"></i>
+              </div>
+            </div>
+          </hgroup>
+          <hgroup class="menu__text">
+            <span class="prod"> Foie gras de canard mi-cuit </span>
+            <h4>Et ses copeaux de truffe noire</h4>
+            <div class="price">
+              <span>35€</span>
+            </div>
+          </hgroup>
+          <hgroup class="menu__text">
+            <span class="prod">Oeuf au plat </span>
+            <h4>Assaisonné à la truffe sur lit de caviar</h4>
+            <div class="price">
+              <span>20€</span>
+            </div>
+          </hgroup>
+        </articles>
+        <articles class="menu__details">
+          <h2 class="subtitle">Plats</h2>
+          <hgroup class="menu__text">
+            <span class="prod">Filet de boeuf aux herbes </span>
+            <h4>Accompagné de sa ribambelle de légumes</h4>
+            <div class="price">
+              <span>40€</span>
+            </div>
+          </hgroup>
+          <hgroup class="menu__text">
+            <span class="prod"> Parmentier de queue de boeuf </span>
+            <h4>À la truffe noire sur sa purée de panais</h4>
+            <div class="price">
+              <span>35€</span>
+            </div>
+          </hgroup>
+          <hgroup class="menu__text">
+            <span class="prod">Filet de turbot </span>
+            <h4>Aux agrumes</h4>
+            <div class="price">
+              <span>44€</span>
+            </div>
+          </hgroup>
+        </articles>
+        <articles class="menu__details">
+          <h2 class="subtitle">Desserts</h2>
+          <hgroup class="menu__text">
+            <span class="prod">Paris-Brest </span>
+            <h4>Revisité</h4>
+            <div class="price">
+              <span>18€</span>
+            </div>
+          </hgroup>
+          <hgroup class="menu__text">
+            <span class="prod"> Macaron au chocolat d'exception </span>
+            <h4>Et glace à la vanille de Madagascar</h4>
+            <div class="price">
+              <span>22€</span>
+            </div>
+          </hgroup>
+          <hgroup class="menu__text">
+            <span class="prod">Mousse au chocolat </span>
+            <h4>Au piment d'Espelette et à la truffe noire</h4>
+            <div class="price">
+              <span>23€</span>
+            </div>
+          </hgroup>
+        </articles>
+      </section>
+    </main>
     <footer>
       <div class="footer">
         <div class="footer__logo">
