--- a/La_note_enchantee.html
+++ b/La_note_enchantee.html
@@ -33,7 +33,7 @@
   <body class="menu">
     <header class="menu__header">
       <div class="menu__header__logo">
-        <a href="#">
+        <a href="index.html">
           <img src="images/logo/ohmyfood@2x.svg" alt="ohmyfood logo" />
         </a>
 
@@ -44,91 +44,98 @@
       <figure class="cover__img">
         <img
           alt="La palette du goût restaurant"
-          src="images/restaurants/palette.jpg"
+          src="images/restaurants/note.jpg"
         />
       </figure>
     </header>
     <main class="bg-grey">
       <div class="menu__summary">
-        <h1 class="menu__title">La palette du goût</h1>
-        <div class="like">
+        <h1 class="menu__title">La note enchantée</h1>
+        <div class="like like-menu">
           <i class="far fa-heart default-icon"></i>
           <i class="fas fa-heart hover-icon"></i>
         </div>
       </div>
       <section class="menu__plats">
         <articles class="menu__details">
-          <h2 class="subtitle">Entrées</h2>
+          <h2 class="sub__title">Entrées</h2>
           <hgroup class="menu__text">
-            <span class="prod">Fricassée d'escargot </span>
-            <h4>Au piment d'Espelette</h4>
+            <span class="prod">Ravioles de foie gras  </span>
+            <h4>Accompagnés de leur crème à la truffe</h4>
             <div class="price__container">
               <div class="price">
                 <span>25€</span>
               </div>
               <div class="checkbox">
-                <i class="fas fa-check-circle btn-cirle"></i>
+                <i class="fas fa-check-circle btn-circle"></i>
               </div>
             </div>
           </hgroup>
           <hgroup class="menu__text">
-            <span class="prod"> Foie gras de canard mi-cuit </span>
-            <h4>Et ses copeaux de truffe noire</h4>
+            <span class="prod"> Caviar osciètre</span>
+            <h4>Sur blini à la farine de blé noir</h4>
             <div class="price">
               <span>35€</span>
             </div>
           </hgroup>
           <hgroup class="menu__text">
-            <span class="prod">Oeuf au plat </span>
-            <h4>Assaisonné à la truffe sur lit de caviar</h4>
+            <span class="prod">Homard et espuma de potiron </span>
+            <h4>Mariné aux zestes d'orange</h4>
             <div class="price">
               <span>20€</span>
             </div>
           </hgroup>
+          <hgroup class="menu__text">
+            <span class="prod">Foie gras de canard cuit entier </span>
+            <h4>Confiture de figue et pain toasté</h4>
+            <div class="price">
+              <span>35€</span>
+            </div>
+          </hgroup>
         </articles>
         <articles class="menu__details">
-          <h2 class="subtitle">Plats</h2>
+          <h2 class="sub__title">Plats</h2>
           <hgroup class="menu__text">
-            <span class="prod">Filet de boeuf aux herbes </span>
-            <h4>Accompagné de sa ribambelle de légumes</h4>
+            <span class="prod">Noix de coquilles Saint-Jacques </span>
+            <h4>Sur lit de purée de céleri-rave</h4>
             <div class="price">
               <span>40€</span>
             </div>
           </hgroup>
           <hgroup class="menu__text">
-            <span class="prod"> Parmentier de queue de boeuf </span>
-            <h4>À la truffe noire sur sa purée de panais</h4>
+            <span class="prod"> Langoustine poêlée </span>
+            <h4>Purée de patate douce</h4>
             <div class="price">
               <span>35€</span>
             </div>
           </hgroup>
           <hgroup class="menu__text">
-            <span class="prod">Filet de turbot </span>
-            <h4>Aux agrumes</h4>
+            <span class="prod">Mijoté de queue de boeuf  </span>
+            <h4>Et riz sauvage aux zestes de citron</h4>
             <div class="price">
               <span>44€</span>
             </div>
           </hgroup>
         </articles>
         <articles class="menu__details">
-          <h2 class="subtitle">Desserts</h2>
+          <h2 class="sub__title">Desserts</h2>
           <hgroup class="menu__text">
-            <span class="prod">Paris-Brest </span>
-            <h4>Revisité</h4>
+            <span class="prod">Macaron noisette et chocolat </span>
+            <h4>Glace au caramel brun et sel de Guérande</h4>
             <div class="price">
               <span>18€</span>
             </div>
           </hgroup>
           <hgroup class="menu__text">
-            <span class="prod"> Macaron au chocolat d'exception </span>
-            <h4>Et glace à la vanille de Madagascar</h4>
+            <span class="prod"> Baba au rhum revisité  </span>
+            <h4>Avec son coulis de citron</h4>
             <div class="price">
               <span>22€</span>
             </div>
           </hgroup>
           <hgroup class="menu__text">
-            <span class="prod">Mousse au chocolat </span>
-            <h4>Au piment d'Espelette et à la truffe noire</h4>
+            <span class="prod">Tarte au citron meringuée  </span>
+            <h4>Déstructurée</h4>
             <div class="price">
               <span>23€</span>
             </div>
@@ -136,25 +143,29 @@
         </articles>
       </section>
     </main>
-    <footer>
-      <div class="footer">
-        <div class="footer__logo">
-          <img src="images/logo/ohmyfood@2x.svg" alt="logo footer" />
-        </div>
-        <div class="footer__link">
-          <ul class="footer__link__value">
-            <li>
-              <i class="fas fa-utensils footer-icons"></i>Proposer un restaurant
-            </li>
-            <li>
+    <div class="footer">
+      <div class="footer__logo">
+        <img src="images/logo/ohmyfood@2x.svg" alt="logo footer" />
+      </div>
+      <div class="footer__link">
+        <ul class="footer__link__value">
+          <li>
+            <a href="#">
+              <i class="fas fa-utensils footer-icons"></i>Proposer un
+              restaurant
+            </a>
+          </li>
+          <li>
+            <a href="#">
               <i class="fas fa-hands-helping footer-icons"></i>Devenir
               partenaire
-            </li>
-            <li>Mentions légales</li>
-            <li>Contact</li>
-          </ul>
-        </div>
+            </a>
+          </li>
+          <li><a href="#">Mentions légales</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
       </div>
-    </footer>
+    </div>
+  </footer>
   </body>
 </html>
