--- a/La_note_enchantee.html
+++ b/La_note_enchantee.html
@@ -32,7 +32,7 @@
   </head>
   <body class="menu">
     <header class="menu__header">
-      <div class="menu__header__logo">
+      <div class="header__logo menu__header__logo">
         <a href="index.html">
           <img src="images/logo/ohmyfood@2x.svg" alt="ohmyfood logo" />
         </a>
@@ -140,9 +140,11 @@
               <span>23€</span>
             </div>
           </hgroup>
+          <a href="" class="reserve__btn-1 btn-2"> Commander </a>
         </articles>
       </section>
     </main>
+
     <div class="footer">
       <div class="footer__logo">
         <img src="images/logo/ohmyfood@2x.svg" alt="logo footer" />
@@ -166,6 +168,30 @@
         </ul>
       </div>
     </div>
-  </footer>
+  </footer><footer>
+      <div class="footer">
+        <div class="footer__logo">
+          <img src="images/logo/ohmyfood@2x.svg" alt="logo footer" />
+        </div>
+        <div class="footer__link">
+          <ul class="footer__link__value">
+            <li>
+              <a href="#">
+                <i class="fas fa-utensils footer-icons"></i>Proposer un
+                restaurant
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <i class="fas fa-hands-helping footer-icons"></i>Devenir
+                partenaire
+              </a>
+            </li>
+            <li><a href="#">Mentions légales</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
