--- a/Le_delice_des_sens.html
+++ b/Le_delice_des_sens.html
@@ -32,8 +32,10 @@
   </head>
   <body class="menu">
     <header class="menu__header">
-      <div class="header__logo">
-        <a href="index.html" class="header__back__icon"><i class="fas fa-arrow-left"></i></a>
+      <div class="header__logo menu__header__logo">
+        <a href="index.html" class="header__back__icon"
+          ><i class="fas fa-arrow-left"></i
+        ></a>
         <a href="#">
           <img src="images/logo/ohmyfood@2x.svg" alt="ohmyfood logo" />
         </a>
@@ -69,14 +71,14 @@
             </div>
           </hgroup>
           <hgroup class="menu__text">
-            <span class="prod"> Bouchée de homard croustillant  </span>
+            <span class="prod"> Bouchée de homard croustillant </span>
             <h4>Et sa farandole de petits légumes</h4>
             <div class="price">
               <span>35€</span>
             </div>
           </hgroup>
           <hgroup class="menu__text">
-            <span class="prod">Velouté de cèpes  </span>
+            <span class="prod">Velouté de cèpes </span>
             <h4>Aux truffes</h4>
             <div class="price">
               <span>20€</span>
@@ -117,7 +119,7 @@
             </div>
           </hgroup>
           <hgroup class="menu__text">
-            <span class="prod"> Crème brulée  </span>
+            <span class="prod"> Crème brulée </span>
             <h4>Revisitée</h4>
             <div class="price">
               <span>22€</span>
@@ -130,32 +132,34 @@
               <span>23€</span>
             </div>
           </hgroup>
+          <a href="" class="reserve__btn-1 btn-2"> Commander </a>
         </articles>
       </section>
     </main>
-    <div class="footer">
-      <div class="footer__logo">
-        <img src="images/logo/ohmyfood@2x.svg" alt="logo footer" />
+    <footer>
+      <div class="footer">
+        <div class="footer__logo">
+          <img src="images/logo/ohmyfood@2x.svg" alt="logo footer" />
+        </div>
+        <div class="footer__link">
+          <ul class="footer__link__value">
+            <li>
+              <a href="#">
+                <i class="fas fa-utensils footer-icons"></i>Proposer un
+                restaurant
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <i class="fas fa-hands-helping footer-icons"></i>Devenir
+                partenaire
+              </a>
+            </li>
+            <li><a href="#">Mentions légales</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </div>
       </div>
-      <div class="footer__link">
-        <ul class="footer__link__value">
-          <li>
-            <a href="#">
-              <i class="fas fa-utensils footer-icons"></i>Proposer un
-              restaurant
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <i class="fas fa-hands-helping footer-icons"></i>Devenir
-              partenaire
-            </a>
-          </li>
-          <li><a href="#">Mentions légales</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </div>
-    </div>
-  </footer>
+    </footer>
   </body>
 </html>
