--- a/La_note_enchantee.html
+++ b/La_note_enchantee.html
@@ -11,8 +11,8 @@
       href="images/logo/ohmyfood@2x.svg"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href=".public/css/style.css" />
-    <link rel="stylesheet" href=".public/media.css" />
+    <link rel="stylesheet" href="public/css/style.css" />
+  
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap"
