--- a/La_note_enchantee.html
+++ b/La_note_enchantee.html
@@ -144,31 +144,7 @@
         </articles>
       </section>
     </main>
-
-    <div class="footer">
-      <div class="footer__logo">
-        <img src="images/logo/ohmyfood@2x.svg" alt="logo footer" />
-      </div>
-      <div class="footer__link">
-        <ul class="footer__link__value">
-          <li>
-            <a href="#">
-              <i class="fas fa-utensils footer-icons"></i>Proposer un
-              restaurant
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <i class="fas fa-hands-helping footer-icons"></i>Devenir
-              partenaire
-            </a>
-          </li>
-          <li><a href="#">Mentions légales</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </div>
-    </div>
-  </footer><footer>
+  </footer>
       <div class="footer">
         <div class="footer__logo">
           <img src="images/logo/ohmyfood@2x.svg" alt="logo footer" />
