--- a/A_la_Francaise.html
+++ b/A_la_Francaise.html
@@ -59,77 +59,135 @@
         <articles class="menu__details">
           <h2 class="sub__title">Entrées</h2>
           <hgroup class="menu__text">
-            <span class="prod">Tartare de poulpe acidulé </span>
-            <h4>Aux zestes d'orange</h4>
+            <div class="menu__title__price">
+              <span class="prod">Tartare de poulpe acidulé </span>
+              <h4>Aux zestes d'orange</h4>
+            </div>
             <div class="price__container">
               <div class="price">
                 <span>25€</span>
               </div>
-              <div class="checkbox">
-                <i class="fas fa-check-circle btn-circle"></i>
+            </div>
+            <div class="checkbox">
+              <i class="fas fa-check-circle btn-circle"></i>
+            </div>
+          </hgroup>
+          <hgroup class="menu__text">
+            <div class="menu__title__price">
+              <span class="prod"> Velouté de légumes d'antan </span>
+              <h4>Carotte, panais, topinambour</h4>
+            </div>
+            <div class="price__container">
+              <div class="price">
+                <span>35€</span>
               </div>
             </div>
-          </hgroup>
-          <hgroup class="menu__text">
-            <span class="prod"> Velouté de légumes d'antan </span>
-            <h4>Carotte, panais, topinambour</h4>
-            <div class="price">
-              <span>35€</span>
+            <div class="checkbox">
+              <i class="fas fa-check-circle btn-circle"></i>
             </div>
           </hgroup>
           <hgroup class="menu__text">
-            <span class="prod">Soupe à l'oignon </span>
-            <h4>Revisitée</h4>
-            <div class="price">
-              <span>20€</span>
+            <div class="menu__title__price">
+              <span class="prod">Soupe à l'oignon </span>
+              <h4>Revisitée</h4>
+            </div>
+            <div class="price__container">
+              <div class="price">
+                <span>20€</span>
+              </div>
+            </div>
+            <div class="checkbox">
+              <i class="fas fa-check-circle btn-circle"></i>
             </div>
           </hgroup>
         </articles>
         <articles class="menu__details">
           <h2 class="sub__title">Plats</h2>
           <hgroup class="menu__text">
-            <span class="prod">Coquilles Saint-Jacques</span>
-            <h4>Accompagnées d'une purée de panais</h4>
-            <div class="price">
-              <span>40€</span>
+            <div class="menu__title__price">
+              <span class="prod">Coquilles Saint-Jacques</span>
+              <h4>Accompagnées d'une purée de panais</h4>
+            </div>
+            <div class="price__container">
+              <div class="price">
+                <span>40€</span>
+              </div>
+            </div>
+            <div class="checkbox">
+              <i class="fas fa-check-circle btn-circle"></i>
             </div>
           </hgroup>
           <hgroup class="menu__text">
-            <span class="prod"> Magret de canard</span>
-            <h4>Et parmentier de pommes de terre</h4>
-            <div class="price">
-              <span>35€</span>
+            <div class="menu__title__price">
+              <span class="prod"> Magret de canard</span>
+              <h4>Et parmentier de pommes de terre</h4>
+            </div>
+            <div class="price__container">
+              <div class="price">
+                <span>35€</span>
+              </div>
+            </div>
+            <div class="checkbox">
+              <i class="fas fa-check-circle btn-circle"></i>
             </div>
           </hgroup>
           <hgroup class="menu__text">
-            <span class="prod">Pigeonneau d’Ille-et-Vilaine</span>
-            <h4>Sur son lit de gnocchis aux légumes</h4>
-            <div class="price">
-              <span>44€</span>
+            <div class="menu__title__price">
+              <span class="prod">Pigeonneau d’Ille-et-Vilaine</span>
+              <h4>Sur son lit de gnocchis aux légumes</h4>
+            </div>
+            <div class="price__container">
+              <div class="price">
+                <span>44€</span>
+              </div>
+            </div>
+            <div class="checkbox">
+              <i class="fas fa-check-circle btn-circle"></i>
             </div>
           </hgroup>
         </articles>
         <articles class="menu__details">
           <h2 class="sub__title">Desserts</h2>
           <hgroup class="menu__text">
-            <span class="prod">Pétales de violettes glacés</span>
-            <h4>Et purée de noisettes</h4>
-            <div class="price">
-              <span>18€</span>
+            <div class="menu__title__price">
+              <span class="prod">Pétales de violettes glacés</span>
+              <h4>Et purée de noisettes</h4>
+            </div>
+            <div class="price__container">
+              <div class="price">
+                <span>18€</span>
+              </div>
+            </div>
+            <div class="checkbox">
+              <i class="fas fa-check-circle btn-circle"></i>
             </div>
           </hgroup>
           <hgroup class="menu__text">
-            <span class="prod"> Fondant au chocolat </span>
-            <h4>Revisitér</h4>
-            <div class="price">
-              <span>22€</span>
+            <div class="menu__title__price">
+              <span class="prod"> Fondant au chocolat </span>
+              <h4>Revisitér</h4>
+            </div>
+            <div class="price__container">
+              <div class="price">
+                <span>22€</span>
+              </div>
+            </div>
+            <div class="checkbox">
+              <i class="fas fa-check-circle btn-circle"></i>
             </div>
           </hgroup>
           <hgroup class="menu__text">
-            <span class="prod">Millefeuille croustillant</span>
-            <h4>Myrtilles et pâte d’amande</h4>
-            <div class="price">
-              <span>23€</span>
+            <div class="menu__title__price">
+              <span class="prod">Millefeuille croustillant</span>
+              <h4>Myrtilles et pâte d’amande</h4>
+            </div>
+            <div class="price__container">
+              <div class="price">
+                <span>23€</span>
+              </div>
+            </div>
+            <div class="checkbox">
+              <i class="fas fa-check-circle btn-circle"></i>
             </div>
           </hgroup>
         </articles>
