--- a/La_note_enchantee.html
+++ b/La_note_enchantee.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>OhMyFood</title>
-    <meta name="description" content="OhMyFood" />
+    <title>La note enchantée</title>
+    <meta name="description" content="La note enchantée" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="shortcut icon"
@@ -59,7 +59,7 @@
       <section class="menu__plats">
         <articles class="menu__details">
           <h2 class="sub__title">Entrées</h2>
-          <hgroup class="menu__text">
+          <hgroup class="menu__text fade-1">
             <div class="menu__title__price">
               <span class="prod">Ravioles de foie gras </span>
               <h4>Accompagnés de leur crème à la truffe</h4>
@@ -74,7 +74,7 @@
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
           </hgroup>
-          <hgroup class="menu__text">
+          <hgroup class="menu__text fade-2">
             <div class="menu__title__price">
               <span class="prod"> Caviar osciètre</span>
               <h4>Sur blini à la farine de blé noir</h4>
@@ -88,7 +88,7 @@
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
           </hgroup>
-          <hgroup class="menu__text">
+          <hgroup class="menu__text fade-3">
             <div class="menu__title__price">
               <span class="prod">Homard et espuma de potiron </span>
               <h4>Mariné aux zestes d'orange</h4>
@@ -102,7 +102,7 @@
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
           </hgroup>
-          <hgroup class="menu__text">
+          <hgroup class="menu__text fade-3">
             <div class="menu__title__price">
               <span class="prod">Foie gras de canard cuit entier </span>
               <h4>Confiture de figue et pain toasté</h4>
@@ -119,7 +119,7 @@
         </articles>
         <articles class="menu__details">
           <h2 class="sub__title">Plats</h2>
-          <hgroup class="menu__text">
+          <hgroup class="menu__text fade-5">
             <div class="menu__title__price">
               <span class="prod">Noix de coquilles Saint-Jacques </span>
               <h4>Sur lit de purée de céleri-rave</h4>
@@ -133,7 +133,7 @@
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
           </hgroup>
-          <hgroup class="menu__text">
+          <hgroup class="menu__text fade-6">
             <div class="menu__title__price">
               <span class="prod"> Langoustine poêlée </span>
               <h4>Purée de patate douce</h4>
@@ -147,7 +147,7 @@
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
           </hgroup>
-          <hgroup class="menu__text">
+          <hgroup class="menu__text fade-7">
             <div class="menu__title__price">
               <span class="prod">Mijoté de queue de boeuf </span>
               <h4>Et riz sauvage aux zestes de citron</h4>
@@ -164,7 +164,7 @@
         </articles>
         <articles class="menu__details">
           <h2 class="sub__title">Desserts</h2>
-          <hgroup class="menu__text">
+          <hgroup class="menu__text fade-8">
             <div class="menu__title__price">
               <span class="prod">Macaron noisette et chocolat </span>
               <h4>Glace au caramel brun et sel de Guérande</h4>
@@ -178,7 +178,7 @@
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
           </hgroup>
-          <hgroup class="menu__text">
+          <hgroup class="menu__text fade-9">
             <div class="menu__title__price">
               <span class="prod"> Baba au rhum revisité </span>
               <h4>Avec son coulis de citron</h4>
@@ -192,7 +192,7 @@
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
           </hgroup>
-          <hgroup class="menu__text">
+          <hgroup class="menu__text fade-10">
             <div class="menu__title__price">
               <span class="prod">Tarte au citron meringuée </span>
               <h4>Déstructurée</h4>
@@ -207,7 +207,7 @@
             </div>
           </hgroup>
         </articles>
-        <div class="command-btn">
+        <div class="command-btn fade-11">
           <a href="" class="reserve__btn-1 btn-2"> Commander </a>
         </div>
       </section>
