--- a/La_palette_du_gout.html
+++ b/La_palette_du_gout.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>OhMyFood</title>
-    <meta name="description" content="OhMyFood" />
+    <title>La palette du goût</title>
+    <meta name="description" content="La palette du goût" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="shortcut icon"
@@ -58,7 +58,7 @@
       <section class="menu__plats">
         <articles class="menu__details">
           <h2 class="sub__title">Entrées</h2>
-          <hgroup class="menu__text">
+          <hgroup class="menu__text fade-1">
             <div class="menu__title__price">
               <span class="prod">Fricassée d'escargot </span>
               <h4>Au piment d'Espelette</h4>
@@ -72,7 +72,7 @@
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
           </hgroup>
-          <hgroup class="menu__text">
+          <hgroup class="menu__text fade-2">
             <div class="menu__title__price">
               <span class="prod"> Foie gras de canard mi-cuit </span>
               <h4>Et ses copeaux de truffe noire</h4>
@@ -86,7 +86,7 @@
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
           </hgroup>
-          <hgroup class="menu__text">
+          <hgroup class="menu__text fade-3">
             <div class="menu__title__price">
               <span class="prod">Oeuf au plat </span>
               <h4>Assaisonné à la truffe sur lit de caviar</h4>
@@ -103,7 +103,7 @@
         </articles>
         <articles class="menu__details">
           <h2 class="sub__title">Plats</h2>
-          <hgroup class="menu__text">
+          <hgroup class="menu__text fade-5">
             <div class="menu__title__price">
               <span class="prod">Filet de boeuf aux herbes </span>
               <h4>Accompagné de sa ribambelle de légumes</h4>
@@ -117,7 +117,7 @@
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
           </hgroup>
-          <hgroup class="menu__text">
+          <hgroup class="menu__text fade-6">
             <div class="menu__title__price">
               <span class="prod"> Parmentier de queue de boeuf </span>
               <h4>À la truffe noire sur sa purée de panais</h4>
@@ -131,7 +131,7 @@
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
           </hgroup>
-          <hgroup class="menu__text">
+          <hgroup class="menu__text fade-7">
             <div class="menu__title__price">
               <span class="prod">Filet de turbot </span>
               <h4>Aux agrumes</h4>
@@ -148,7 +148,7 @@
         </articles>
         <articles class="menu__details">
           <h2 class="sub__title">Desserts</h2>
-          <hgroup class="menu__text">
+          <hgroup class="menu__text fade-8">
             <div class="menu__title__price">
               <span class="prod">Paris-Brest </span>
               <h4>Revisité</h4>
@@ -162,7 +162,7 @@
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
           </hgroup>
-          <hgroup class="menu__text">
+          <hgroup class="menu__text fade-9">
             <div class="menu__title__price">
               <span class="prod"> Macaron au chocolat d'exception </span>
               <h4>Et glace à la vanille de Madagascar</h4>
@@ -176,7 +176,7 @@
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
           </hgroup>
-          <hgroup class="menu__text">
+          <hgroup class="menu__text fade-10">
             <div class="menu__title__price">
               <span class="prod">Mousse au chocolat </span>
               <h4>Au piment d'Espelette et à la truffe noire</h4>
@@ -191,7 +191,7 @@
             </div>
           </hgroup>
         </articles>
-        <div class="command-btn">
+        <div class="command-btn fade-11">
           <a href="" class="reserve__btn-1 btn-2"> Commander </a>
         </div>
       </section>
