--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>OhMyFood</title>
-    <meta name="description" content="OhMyFood" />
+    <title>Bienvenue chez OhMyFood votre nouveau restaurant</title>
+    <meta
+      name="description"
+      content="Bienvenue chez OhMyFood votre nouveau restaurant"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="shortcut icon"
@@ -46,7 +49,7 @@
       </form>
     </header>
     <main>
-      <article class="reserve">
+      <article class="reserve fade-1">
         <hgroup class="reserve__hgroup">
           <h1>Réservez le menu qui vous convient</h1>
           <h2>
@@ -58,21 +61,21 @@
       <aside class="aside">
         <h2 class="aside__title">Fonctionnement</h2>
         <div class="aside__step">
-          <a href="#" class="aside__button">
+          <a href="#" class="aside__button fade-2">
             <span class="aside__circle">1</span>
             <span class="aside__icons">
               <i class="fas fa-mobile-alt"></i>
             </span>
             <span class="aside__texte">Choisissez un restaurant</span>
           </a>
-          <a href="#" class="aside__button">
+          <a href="#" class="aside__button fade-2">
             <span class="aside__circle">2</span>
             <span class="aside__icons">
               <i class="fas fa-list"></i>
             </span>
             <span class="aside__texte">Composez un menu</span>
           </a>
-          <a href="#" class="aside__button">
+          <a href="#" class="aside__button fade-3">
             <span class="aside__circle">3</span>
             <span class="aside__icons">
               <i class="fas fa-store"></i>
@@ -83,9 +86,9 @@
       </aside>
       <section>
         <div class="store">
-          <h2 class="store__title">Restaurants</h2>
+          <h2 class="store__title fade-4">Restaurants</h2>
           <article class="store__card">
-            <figure class="store__img__header">
+            <figure class="store__img__header fade-5">
               <img
                 src="images/restaurants/palette.jpg"
                 alt="La palette du goût"
@@ -109,7 +112,7 @@
             </header>
           </article>
           <article class="store__card">
-            <figure class="store__img__header">
+            <figure class="store__img__header fade-6">
               <img
                 src="images/restaurants/note.jpg"
                 alt="La note enchantée"
@@ -133,7 +136,7 @@
             </header>
           </article>
           <article class="store__card">
-            <figure class="store__img__header">
+            <figure class="store__img__header fade-7">
               <img
                 src="images/restaurants/francaise.jpg"
                 alt="A la francaise"
@@ -156,7 +159,7 @@
             </header>
           </article>
           <article class="store__card">
-            <figure class="store__img__header">
+            <figure class="store__img__header fade-8">
               <img
                 src="images/restaurants/delice.jpg"
                 alt="Le délice des sens"
@@ -182,7 +185,7 @@
       </section>
     </main>
     <footer>
-      <div class="footer">
+      <div class="footer fade-9">
         <div class="footer__logo">
           <img src="images/logo/ohmyfood@2x.svg" alt="logo footer" />
         </div>
@@ -206,5 +209,12 @@
         </div>
       </div>
     </footer>
+    <div class="spinloader">
+      <img src="images/logo/ohmyfood@2x.svg" alt="" />
+      <div class="loader">
+        <div class="loader__cover"></div>
+        <div class="loader__bar"></div>
+      </div>
+    </div>
   </body>
 </html>
