--- a/A_la_Francaise.html
+++ b/A_la_Francaise.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>OhMyFood</title>
-    <meta name="description" content="OhMyFood" />
+    <title>A la francaise</title>
+    <meta name="description" content="A la francaise" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="shortcut icon"
@@ -58,7 +58,7 @@
       <section class="menu__plats">
         <articles class="menu__details">
           <h2 class="sub__title">Entrées</h2>
-          <hgroup class="menu__text">
+          <hgroup class="menu__text fade-1">
             <div class="menu__title__price">
               <span class="prod">Tartare de poulpe acidulé </span>
               <h4>Aux zestes d'orange</h4>
@@ -72,7 +72,7 @@
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
           </hgroup>
-          <hgroup class="menu__text">
+          <hgroup class="menu__text fade-2">
             <div class="menu__title__price">
               <span class="prod"> Velouté de légumes d'antan </span>
               <h4>Carotte, panais, topinambour</h4>
@@ -86,7 +86,7 @@
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
           </hgroup>
-          <hgroup class="menu__text">
+          <hgroup class="menu__text fade-3">
             <div class="menu__title__price">
               <span class="prod">Soupe à l'oignon </span>
               <h4>Revisitée</h4>
@@ -103,7 +103,7 @@
         </articles>
         <articles class="menu__details">
           <h2 class="sub__title">Plats</h2>
-          <hgroup class="menu__text">
+          <hgroup class="menu__text fade-5">
             <div class="menu__title__price">
               <span class="prod">Coquilles Saint-Jacques</span>
               <h4>Accompagnées d'une purée de panais</h4>
@@ -117,7 +117,7 @@
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
           </hgroup>
-          <hgroup class="menu__text">
+          <hgroup class="menu__text fade-6">
             <div class="menu__title__price">
               <span class="prod"> Magret de canard</span>
               <h4>Et parmentier de pommes de terre</h4>
@@ -131,7 +131,7 @@
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
           </hgroup>
-          <hgroup class="menu__text">
+          <hgroup class="menu__text fade-7">
             <div class="menu__title__price">
               <span class="prod">Pigeonneau d’Ille-et-Vilaine</span>
               <h4>Sur son lit de gnocchis aux légumes</h4>
@@ -148,7 +148,7 @@
         </articles>
         <articles class="menu__details">
           <h2 class="sub__title">Desserts</h2>
-          <hgroup class="menu__text">
+          <hgroup class="menu__text fade-8">
             <div class="menu__title__price">
               <span class="prod">Pétales de violettes glacés</span>
               <h4>Et purée de noisettes</h4>
@@ -162,7 +162,7 @@
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
           </hgroup>
-          <hgroup class="menu__text">
+          <hgroup class="menu__text fade-9">
             <div class="menu__title__price">
               <span class="prod"> Fondant au chocolat </span>
               <h4>Revisitér</h4>
@@ -176,7 +176,7 @@
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
           </hgroup>
-          <hgroup class="menu__text">
+          <hgroup class="menu__text fade-10">
             <div class="menu__title__price">
               <span class="prod">Millefeuille croustillant</span>
               <h4>Myrtilles et pâte d’amande</h4>
@@ -191,7 +191,7 @@
             </div>
           </hgroup>
         </articles>
-        <div class="command-btn">
+        <div class="command-btn fade-11">
           <a href="" class="reserve__btn-1 btn-2"> Commander </a>
         </div>
       </section>
